fixed message preview growing too large for long words

--- a/web-client/src/components/SplitLayout/SplitLayout.scss
+++ b/web-client/src/components/SplitLayout/SplitLayout.scss
@@ -9,6 +9,7 @@
 
   .optional-pane {
     flex: 1;
+    max-width: 50%;
   }
 
   @media only screen and (max-width: 768px) {
